fix(examples): Fix alignment

--- a/src/_includes/scss/_examples.scss
+++ b/src/_includes/scss/_examples.scss
@@ -4,8 +4,11 @@
     padding-left: 1.55rem;
     margin: 1em 0;
 
-    & + & {
-      margin-top: 1.5em;
+    @media screen and (max-width: 47.9375em) {
+
+      & + & {
+        margin-top: 1.5em;
+      }
     }
   }
 
